--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.rackspace.plugins</groupId>
     <artifactId>veracode-hudson-plugin</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
 
     <packaging>hpi</packaging>
 
