--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>com.rackspace.plugins</groupId>
-    <artifactId>veracode-hudson-plugin</artifactId>
+    <artifactId>veracode-jenkins-plugin</artifactId>
     <version>1.3-SNAPSHOT</version>
 
     <packaging>hpi</packaging>
