--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,10 +10,11 @@
     <groupId>com.rackspace.plugins</groupId>
     <artifactId>veracode-jenkins-plugin</artifactId>
     <version>1.3-SNAPSHOT</version>
-
     <packaging>hpi</packaging>
 
     <name>Veracode Plugin</name>
+    <description>A jenkins plugin to perform security scans using veracode</description>
+    <url>https://github.com/rackspace/veracode-jenkins-plugin</url>
 
     <licenses>
         <license>
@@ -25,9 +25,22 @@
     </licenses>
 
     <scm>
+        <url>https://github.com/rackspace/veracode-jenkins-plugin.git</url>
         <connection>scm:git|ssh://git@github.com/veracode-jenkins-plugin</connection>
         <developerConnection>scm:git|ssh://git@github.com/veracode-jenkins-plugin</developerConnection>
     </scm>
+
+    <developers>
+        <developer>
+            <name>John Madrid</name>
+            <id>RackerJohnMadrid</id>
+            <email>john.madrid@rackspace.com</email>
+            <organization>Rackspace</organization>
+            <roles>
+                <role>Developer</role>
+            </roles>
+        </developer>
+    </developers>
 
     <profiles>
         <profile>
@@ -80,7 +93,7 @@
         <dependency>
             <groupId>com.rackspace.api.clients</groupId>
             <artifactId>veracode-client</artifactId>
-            <version>1.2</version>
+            <version>1.3</version>
         </dependency>
     </dependencies>
 
