--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.rackspace.plugins</groupId>
     <artifactId>veracode-jenkins-plugin</artifactId>
-    <version>1.3</version>
+    <version>1.4-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <name>Veracode Plugin</name>
